<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Set_password"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/mtd_anydore"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/ll_dialog_new_password_content"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/mtd_anydore"
                android:text="@string/New_password"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_dialog_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="@string/At_least_6_characters"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:imeActionLabel="@string/Done"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/mtd_anydore"
                android:text="@string/Confirm_Password"
                android:textColor="@color/black"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/edt_dialog_again_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="@string/At_least_6_characters"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:imeActionLabel="@string/Done"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mtd_anydore"
                    android:text="@string/Recovery_Key"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_dialog_password_restore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="@string/At_least_6_characters"
                android:textSize="14sp"
                android:inputType="text"
                android:imeActionLabel="@string/Done"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_dialog_password_is_not_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:textColor="@color/redA400"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pb_dialog_new_password_container"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        >
        <Button
            android:id="@+id/btn_dialog_cancel_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textSize="10sp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/redA400"
            />
        <Button
            android:id="@+id/btn_dialog_save_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Save"
            android:textSize="10sp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/redA400"
            />
    </LinearLayout>

</LinearLayout>