<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:fitsSystemWindows="true"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reset_Password"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/mtd_anydore"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="20dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Your_recovery_key"
                android:textColor="@color/black"
                android:fontFamily="@font/mtd_anydore"
                android:textSize="18sp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_password_restore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:layout_marginStart="10dp"
            android:hint="09***99"
            android:paddingHorizontal="10dp"
            android:inputType="text"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_incorrect_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Incorrect_Key_Please_try_again"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="gone"
        />

    <ProgressBar
        android:id="@+id/pb_reset_password"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_password_restore_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reset"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/redA400"
        />

</LinearLayout>