<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/mtd_anydore"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:id="@+id/ll_dialog_login_content"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/Password"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/mtd_anydore"
                />
            <EditText
                android:id="@+id/edt_dialog_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_dialog_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forget_password"
            android:textColor="@color/text_selector"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_dialog_incorrect_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Incorrect_Password"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:visibility="invisible"
            android:layout_marginVertical="5dp"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_dialog_login_password"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >
        <Button
            android:id="@+id/btn_dialog_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/redA400"
            />
        <Button
            android:id="@+id/btn_dialog_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/redA400"
            android:text="@string/Login"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>

</LinearLayout>