<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        >
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Shop"
            android:fontFamily="@font/mtd_anydore"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:layout_centerInParent="true"
            />
        <ImageView
            android:id="@+id/iv_ok"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_btn_ok_waiting"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_contain_last_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_last_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/mtd_anydore"
                android:text="@string/Last_purchase"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/tv_last_purchase">

                <TextView
                    android:id="@+id/tv_last_purchase_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tv_last_purchase_name"
                    android:layout_alignParentEnd="true"
                    android:text="0000000"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_last_purchase_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@id/tv_last_purchase_price"
                    android:text="dd/MM/yyyy"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_last_purchase_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_last_purchase_time"
                    android:layout_alignStart="@id/tv_last_purchase_time"
                    android:text="aaaaaa"
                    android:textColor="@color/white" />

            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/You_can_find_your_purchase_history"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_one_cheat"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/mtd_anydore"
            android:layout_centerVertical="true"
            />
        <RelativeLayout
            android:id="@+id/rl_btn_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            >
            <ImageView
                android:id="@+id/iv_get_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_btn_waiting_green"
                android:layout_centerInParent="true"
                android:clickable="true"
                />

            <TextView
                android:id="@+id/tv_get_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Free"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                />
            <TextView
                android:id="@+id/tv_watch_ad_count"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="5"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_green_circle_border_2"
                android:gravity="center"
                android:layout_alignEnd="@id/iv_get_free"
                />

            <TextView
                android:id="@+id/tv_timer_get_reward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="07:59"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/iv_get_free"
                android:layout_marginTop="25dp"
                />
        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:visibility="gone"
        />

</LinearLayout>